--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "codegen": "gql-gen --watch"
   },
   "dependencies": {
+    "@apollo/client": "^3.8.5",
+    "@apollo/experimental-nextjs-app-support": "^0.4.3",
     "@apollo/server": "^4.9.3",
     "@as-integrations/next": "^2.0.2",
     "@graphql-tools/graphql-file-loader": "^8.0.0",
@@ -36,6 +38,8 @@
   "devDependencies": {
     "@graphql-codegen/cli": "^5.0.0",
     "@graphql-codegen/typescript": "^4.0.1",
+    "@graphql-codegen/typescript-operations": "^4.0.1",
+    "@graphql-codegen/typescript-react-apollo": "^4.0.0",
     "@graphql-codegen/typescript-resolvers": "^4.0.1",
     "@parcel/watcher": "^2.3.0",
     "@testing-library/jest-dom": "^6.1.3",
