--- a/package.json
+++ b/package.json
@@ -23,8 +23,15 @@
     "@apollo/experimental-nextjs-app-support": "^0.4.3",
     "@apollo/server": "^4.9.3",
     "@as-integrations/next": "^2.0.2",
+    "@emotion/cache": "^11.11.0",
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@fontsource/roboto": "^5.0.8",
     "@graphql-tools/graphql-file-loader": "^8.0.0",
     "@graphql-tools/load": "^8.0.0",
+    "@mui/icons-material": "^5.14.16",
+    "@mui/material": "^5.14.16",
+    "@mui/styled-engine-sc": "^6.0.0-alpha.4",
     "@types/node": "20.6.3",
     "@types/react": "18.2.22",
     "@types/react-dom": "18.2.7",
@@ -33,6 +40,7 @@
     "next": "13.5.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "styled-components": "^6.1.0",
     "typescript": "5.2.2"
   },
   "devDependencies": {
