--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
     "dev": "next dev",
     "build": "run-s codegen __build",
     "start": "next start",
-    "test": "jest --watch",
-    "test:ci": "jest --ci",
+    "test": "jest --ci",
+    "test:watch": "jest --watch",
     "lint": "run-p lint:*",
     "fix": "run-p fix:*",
     "lint:tsc": "tsc --noEmit",
